--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
 <link href="css/freelancer.min.css" rel="stylesheet">
 </head>
-<body>
+<body id="page-top">
 <div align="middle">
 <div id="usernamesearch"></div>
 <img id="userdisplaylogo" src="//cdn2.scratch.mit.edu/get_image/user/default_60x60.png"/>
