--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <head>
 <title>Scratch Stats by -Bonfire-</title>
-<link rel="stylesheet" href="./sweetalert2.min.css">
-<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-<link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
 <style>
 body {
   font-family: 'Lato';
@@ -755,14 +751,25 @@ img.mfp-img {
 <br>
 <div id="userbasicinfo"></div>
 <br>
-<div id="userdisplayaboutme"></div>
-<div id="userdisplaydescription"></div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<section class="bg-primary text-white mb-0" id="about">
+<div class="container">
+<h2 class="text-center text-uppercase text-white">About</h2>
+<hr class="star-light mb-5">
+<div class="row">
+<div class="col-lg-4 ml-auto">
+<p class="lead" id="useraboutme"></p>
+</div>
+<div class="col-lg-4 mr-auto">
+</div>
+</div>
+<div class="text-center mt-4">
+<a class="btn btn-xl btn-outline-light" href="#">
+<i class="fa fa-download mr-2"></i>
+LINK TO PROFILE AND TEXT View Profile!
+</a>
+</div>
+</div>
+</section>
 <span id="usermessagecount"></span>
 <div class="text-center mt-4">
 <a class="btn btn-xl btn-outline-light" href="#">
