--- a/index.html
+++ b/index.html
@@ -757,7 +757,8 @@ img.mfp-img {
 <hr class="star-light mb-5">
 <div class="row">
 <div class="col-lg-4 ml-auto">
-<p class="lead" id="useraboutme"></p>
+<div id="useraboutme">
+</div>
 </div>
 <div class="col-lg-4 mr-auto">
 </div>
@@ -765,7 +766,6 @@ img.mfp-img {
 <div class="text-center mt-4">
 <a class="btn btn-xl btn-outline-light" href="#">
 <i class="fa fa-download mr-2"></i>
-LINK TO PROFILE AND TEXT View Profile!
 </a>
 </div>
 </div>
