--- a/index.html
+++ b/index.html
@@ -754,10 +754,9 @@ img.mfp-img {
 <section class="bg-primary text-white mb-0" id="about">
 <div class="container">
 <h2 class="text-center text-uppercase text-white">About</h2>
-<hr class="star-light mb-5">
 <div class="row">
 <div class="col-lg-4 ml-auto">
-<div id="useraboutme">
+<div id="userdisplayaboutme">
 </div>
 </div>
 <div class="col-lg-4 mr-auto">
