--- a/index.html
+++ b/index.html
@@ -744,9 +744,11 @@ img.mfp-img {
 </style>
 </head>
 <body id="page-top">
+<header class="masthead bg-primary text-white text-center">
 <div align="middle">
-<div id="usernamesearch"></div>
 <img id="userdisplaylogo" src="//cdn2.scratch.mit.edu/get_image/user/default_60x60.png"/>
+<div id="usernamesearch"></div>
+  </header>
 </div>
 <br>
 <div id="userbasicinfo"></div>
