--- a/index.html
+++ b/index.html
@@ -746,16 +746,16 @@ img.mfp-img {
 <body id="page-top">
 <header class="masthead bg-primary text-white text-center">
 <div align="middle">
-<img id="userdisplaylogo" src="//cdn2.scratch.mit.edu/get_image/user/default_60x60.png"/>
+<img id="userdisplaylogo" src="//cdn2.scratch.mit.edu/get_image/user/default_60x60.png"/ style="border-radius: 20px">
 <div id="usernamesearch"></div>
-  </header>
+</header>
 </div>
 <br>
 <div id="userbasicinfo"></div>
 <br>
 <section class="bg-primary text-white mb-0" id="about">
 <div class="container">
-<h2 class="text-center text-uppercase text-white">About</h2>
+<h2 class="text-center text-uppercase text-white">About Me</h2>
 <div class="row">
 <div class="col-lg-4 ml-auto">
 <div id="userdisplayaboutme">
@@ -764,9 +764,19 @@ img.mfp-img {
 <div class="col-lg-4 mr-auto">
 </div>
 </div>
+<h2 class="text-center text-uppercase text-white">What I'm Working on</h2>
+<div class="row">
+<div class="col-lg-4 ml-auto">
+<div id="userdisplaydescription">
+</div>
+</div>
+<div class="col-lg-4 mr-auto">
+</div>
+</div>
 <div class="text-center mt-4">
 <a class="btn btn-xl btn-outline-light" href="#">
 <i class="fa fa-download mr-2"></i>
+View Profile
 </a>
 </div>
 </div>
