--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@ body{font-family:Lato}h1,h2,h3,h4,h5,h6{font-weight:700;font-family:Montserrat}h
 <body id="page-top">
 <header class="masthead bg-primary text-white text-center">
 <div class="container">
-<img id="userdisplaylogo" src="//cdn2.scratch.mit.edu/get_image/user/default_60x60.png"/ style="border-radius: 20px" align="middle">
-<h1 class="text-uppercase mb-0" id="usernamesearch"></h1>
+<img id="userlogo" src="//cdn2.scratch.mit.edu/get_image/user/default_60x60.png"/ style="border-radius: 20px" align="middle">
+<h1 class="text-uppercase mb-0" id="displayusername"></h1>
 <hr class="star-light"></hr>
 <h2 class="font-weight-light mb-0" id="userbasicinfo"></h2>
 </div>
@@ -384,10 +384,10 @@ body{font-family:Lato}h1,h2,h3,h4,h5,h6{font-weight:700;font-family:Montserrat}h
 <hr class="star-light mb-5">
 <div class="row">
 <div class="col-lg-4 ml-auto">
-<p class="lead" id="userdisplayaboutme"></p>
+<p class="lead" id="aboutme"></p>
 </div>
 <div class="col-lg-4 mr-auto">
-<p class="lead" id="userdisplaydescription"></p>
+<p class="lead" id="wiwo"></p>
 </div>
 </div>
 <div class="text-center mt-4">
