--- a/index.html
+++ b/index.html
@@ -408,82 +408,14 @@ img.mfp-img {
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img align="middle" height="200px" id="userdisplaylogo" src="//cdn2.scratch.mit.edu/get_image/user/default_200x200.png" width="200px" id="userlogo" />
-        <h1 class="text-uppercase mb-0" id="displayusername">Username</h1>
+        <img style="border-radius: 20px;" align="middle" height="100px" id="userdisplaylogo" src="//cdn2.scratch.mit.edu/get_image/user/default_100x100.png" width="100px" id="userlogo" />
+        <h1 class="text-uppercase mb-0" id="displayusername"></h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Day Joined - Country - # Of Messages</h2>
       </div>
     </header>
 
-    <!-- Portfolio Grid Section -->
-    <section class="portfolio" id="portfolio">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Projects</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
+  
 
     <!-- About Section -->
     <section class="bg-primary text-white mb-0" id="about">
@@ -492,16 +424,16 @@ img.mfp-img {
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead" id="aboutme">ABOUT ME GOES HERE</p>
+            <p class="lead" id="aboutme"></p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead" id="wiwo">WIWO GOES HERE</p>
+            <p class="lead" id="wiwo"></p>
           </div>
         </div>
         <div class="text-center mt-4">
           <a class="btn btn-xl btn-outline-light" id="profileonscratch" onclick="openscratchuser()">
             <i class="fa fa-download mr-2"></i>
-            View Profile ON SCRATCH!
+            View Profile
           </a>
         </div>
       </div>
