--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@ var getuserinputdata = window.location.href.substring(window.location.href.index
 var scratchusername;
 var userAPIdata;
 var messages;
+finder();
 
 // Username Ask/find
 
@@ -564,6 +565,6 @@ xhttp.send();
       
 function openscratchuser() { window.open("https://scratch.mit.edu/users/" + scratchusername);
 }
-finder()
+
     </script>
     </html>
