--- a/globalstats.html
+++ b/globalstats.html
@@ -48,7 +48,7 @@
 	  <h2 class="font-weight-light mb-0" id="users"></h2>
 	  <h2 class="font-weight-light mb-0" id="studios"></h2>
 	  <h2 class="font-weight-light mb-0" id="comments"></h2>
-	  <h2 class="font-weight-light mb-0">and growing!</h2>
+	  <h2 class="font-weight-light mb-0">... and growing!</h2>
       </div>
     </header>
 <script>
