--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	    <div class="modal-content card-4">
 		   <header class="cont teal">
 		   <span onclick="document.getElementById('id01').style.display='none'" class="button large display-topright">&times;</span>
-		   <h2>Enter Scratcher Username or URL</h2>
+		   <h2 class="font-weight-light mb-0">Enter Scratcher Username or URL</h2>
 		   </header>
 		   <div class="cont light-grey">
 		   <input id="user" class="input animate-input" style="border:0!important; width:30%;" type="text" placeholder="griffpatch" required>
