--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<div id="id01" class="modal animate-opacity">
 	    <div class="modal-content card-4">
 		   <header class="cont teal">
-		   <span onclick="document.getElementById('id01').style.display='none'" class="button large display-topright">&times;</span>
+		   <span onclick="document.getElementById('id01').style.display='none'" class="button large display-topright" style="webkit-transform:0.4s;">&times;</span>
 		   <h2 class="font-weight-light mb-0">Enter Scratcher Username or URL</h2>
 		   </header>
 		   <div class="cont light-grey">
@@ -109,18 +109,6 @@ xhttp.onreadystatechange = function() {
        
     }
 };
-//
-//var xhttp = new XMLHttpRequest();
-//    xhttp.onreadystatechange = function() {
-//        if (this.readyState == 4 && this.status == 200) {
-//           var response = xhttp.responseText;
-//           obj = JSON.parse(response);
-//         document.getElementById("projects").innerHTML = obj.PROJECT_COUNT;
-//          document.getElementById("users").innerHTML = obj.USER_COUNT;
-//      }
-//  };
-//xhttp.open("GET", "https://cors-anywhere.herokuapp.com/https://scratch.mit.edu/statistics/data/daily/", true);
-//xhttp.send();
 
 function myFunction(usertext) {
 document.getElementById('id01').style.display='none';
